[project]
name = "hypersync-lancedb-pipe"
version = "0.1.0"
description = "A serverless embedded streaming OLAP data pipeline"
authors = [{ name = "Evan K", email = "ekcopersonal@gmail.com" }]
dependencies = [
    "lancedb>=0.6.11",
    "hypersync==0.6.1",
    "polars>=0.20.23",
    "hvplot>=0.9.2",
    "ipykernel>=6.29.4",
    "pyarrow==15.0.0",
    "boto3>=1.34.94",
    "duckdb>=0.10.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hypersync_lancedb_pipe"]
